# breaking-speculation

./: Dockerfile  api_flow.txt  docker-compose.yml  main.py  notes.txt  pyproject.toml
app/dash/: app.py  main.py
app/dash/pages/: home.py  test_ingestion.py
app/dash/utils/: http_client.py  ingestion_request.py
app/fastapi/: main.py
app/fastapi/core/: celery_app.py  polymarket_client.py
app/fastapi/schemas/: ingestion.py  intent.py
app/fastapi/services/: dispatcher.py  polymarket.py
app/fastapi/tasks/: ingestion.py
dash_app/: main.py
dash_app/page_elements/: market_plot.py
dash_app/pages/: home.py  test_ingestion.py  test_plots.py
dash_app/utils/: build_figures.py  google_news_feed.py  ingestion_request.py  merge_tree_deltas.py  render_tree.py  result_query.py
fastapi_app/: main.py
fastapi_app/api/routes/: ingestion.py
fastapi_app/core/: async_redis.py  celery_app.py  celery_logging_config.py  redis.py  sync_redis.py
fastapi_app/repositories/: async_repository.py  ingestion_repository.py  sync_repository.py
fastapi_app/schemas/: ingestion.py  intent.py  providers.py
fastapi_app/services/: dispatcher.py  polymarket.py
fastapi_app/services/polymarket/: client.py  handler.py  parsing.py  polymarket.py
fastapi_app/tasks/: __init__.py  ingestion.py
news_procesor/core/: celery_app.py  keywords.py  news_fetcher.py
news_procesor/redis/: redis_client.py  repository.py
news_procesor/tasks/: fetch_headlines.py  poll_updates.py
news_procesor/utils/: ingestion_request.py  result_query.py
utils/: config.py
(+1 files in other folders)
