[project]
name = "speculation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.2",
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.40.0",
]
